# ChangeLog for app-admin/apache-tools
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.194 2015/02/04 18:17:34 polynomial-c Exp $

*apache-tools-2.4.12 (04 Feb 2015)

  04 Feb 2015; Lars Wendler <polynomial-c@gentoo.org>
  -apache-tools-2.4.9-r1.ebuild, +apache-tools-2.4.12.ebuild:
  Security bump (bug #538182). Removed old.

*apache-tools-2.2.29 (22 Sep 2014)

  22 Sep 2014; Lars Wendler <polynomial-c@gentoo.org>
  +apache-tools-2.2.29.ebuild:
  Version bump.

*apache-tools-2.4.10 (24 Jul 2014)

  24 Jul 2014; Patrick Lauer <patrick@gentoo.org> +apache-tools-2.4.10.ebuild:
  Bump for #517298

*apache-tools-2.4.9-r1 (22 May 2014)
*apache-tools-2.2.27-r1 (22 May 2014)

  22 May 2014; Lars Wendler <polynomial-c@gentoo.org>
  apache-tools-2.2.27.ebuild, +apache-tools-2.2.27-r1.ebuild,
  -apache-tools-2.4.9.ebuild, +apache-tools-2.4.9-r1.ebuild:
  Do not link to openssl when ssl USE flag is disabled.

  21 May 2014; Lars Wendler <polynomial-c@gentoo.org>
  -apache-tools-2.2.24.ebuild, -apache-tools-2.2.25.ebuild,
  -apache-tools-2.2.26.ebuild:
  Removed vulnerable versions.

  17 May 2014; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.27.ebuild:
  Stable for alpha, wrt bug #507866

  14 May 2014; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.27.ebuild:
  Stable for sparc, wrt bug #507866

  13 May 2014; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.27.ebuild:
  Stable for ia64, wrt bug #507866

  11 May 2014; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.27.ebuild:
  Stable for ppc64, wrt bug #507866

  10 May 2014; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.27.ebuild:
  Stable for ppc, wrt bug #507866

  24 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> metadata.xml:
  Cleaned up maintainer list.

  22 Apr 2014; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.27.ebuild:
  Stable for arm, wrt bug #507866
