@@ -9,25 +9,15 @@ DIST httpd-2.4.10.tar.bz2 5031834 SHA256 176c4dac1a745f07b7b91e7f4fd48f9c48049fa
 DIST httpd-2.4.12.tar.bz2 5054838 SHA256 ad6d39edfe4621d8cc9a2791f6f8d6876943a9da41ac8533d77407a2e630eae4 SHA512 f69db14b421f0e1e4861fe4d8b652688d50ca9eb41c622242d11ae55687eb6c2142a8505a8c3fb6f2bd53167be535bc0a77ca1af97e0720930fc7f20f4c1f8e8 WHIRLPOOL 56512066e8978c4a3d47d0cc2bb92093fd468a9b2f46b8b07fe4db366f55fa5e74ae58bbebe2377cbe0c66f1585759115c786f62f18ac1abc534fb257689d250
 EBUILD apache-tools-2.2.27-r1.ebuild 2240 SHA256 4f6a17d776eec10b1c3327139d7f1cffe9636f5b187d9eec58f8e7756d7f6a9a SHA512 cf0de6975d6ee0a3e31714c13eba0a81772ab11f0f257d57313a6c834105c5ec49d558b38a80795c2186d4dcc409e070a2bfe5ddac02bdfce58c3e4f14dc6338 WHIRLPOOL 71d7213d053dba6e12721a384142ba5d389a4cf69c6bc3b7b7b9edf2c9f310a70ae571e69b30e0d15ed35637f35bb059d3c7da00be934048f6464d772b85d8e3
 EBUILD apache-tools-2.2.27.ebuild 2285 SHA256 b0acb068dadd1411274400161b9b0ffe529284afba1371699136ad922174e10c SHA512 22ae0714dd44015c9dc6341c9d3625fd825023cfda35e8f81a96b7aa6a083caea72ce2ddc9f69dcdcff023347898520fa26eb43161f061e47936d463de2e7355 WHIRLPOOL 8056c45abf69700035d2a61d3dd091b4fd4f0d0718c89b4a2bc8549c0fa31a7a53daa5f9909f48e76bf1e497748e43ded62ad61be562c169dbd55c30de3b1691
-EBUILD apache-tools-2.2.29.ebuild 2237 SHA256 e3ad1adf82ef359c1044f8143346a389fad468733e362d69b0ac9330950720e8 SHA512 6e3bb015d003e2a445b0c348d757f29cbf605cc529af731363cf3b2b181be35424cb4cfe3a51224d9cc68695989e8631c4b752ea55d3e50e140f30acd95d7d32 WHIRLPOOL 2ef24ecd0756772e84224947ae80d217bc528ca56d7861771a9adef1fe4cbd92065aad4e81a9b74feefe13f3501bfbbbf5d8403523ef0a622f95c74a3d3e706e
+EBUILD apache-tools-2.2.29.ebuild 2227 SHA256 37f477314c25c270873dcc507acb6229ceed52a38af1134638fe04fcf68c1ef6 SHA512 3a94c14c99ab36205d59c5c9241b677f92ecf6cf0736c3067ab7b9409fd94d6e2218f8645a4ab4a3602944daf1c6aaf5bbdd870b5b719a7dac0a77c306caee78 WHIRLPOOL 258a173490566294a2c87206be573f7bd471ca5be0afad2389cdb1134ca1e2e672bfad4b49435297f63295b675cb21024e7e7d24049b9a0458f5e42922a71258
 EBUILD apache-tools-2.4.10.ebuild 2581 SHA256 45a6d2048653c50f67f648768973ebbada22bc048c3dd4a23025c8cb6596b25b SHA512 3ebec6aa915fecdef9343c0d2b3818a8fb05692f9349c74562edc503236bad7ffbe0a04f6b6ca0608c4b3c7748c06529e448fceed8cf9efbe25c70ad78643b1a WHIRLPOOL 07a738a208986e3314b3e27fe4f18428c79243eaf7234fbf99ed9336b49d4cc844d7fe26106f1bde8c8650c2e91149462eccd84ca7c034e4b0357723efa7d28e
 EBUILD apache-tools-2.4.12.ebuild 2586 SHA256 6f5a8d51ade0cbbec0a14e03fe692e6fec497ea2307f8648c133ed7d3abe97dc SHA512 adcd082a34d62223ac0b9c07df8dd220222ccdfc9b93aa2002cc070becfa35eb1e434f86f4e80eb2c67c574d3d629e959f095b6bf538dc4bbf8325b06d14b902 WHIRLPOOL d91e3afcc339292a22ed22422800d7496763a1bb87a8f31af087be2b39bd6700c01a51286ded4871f36bbfbf3bb11dfcdb93edc7c5d9c9c92390a85f3c114107
-MISC ChangeLog 26234 SHA256 64becfe434700b100ad448ab8cdfd71006a67ea518e91889ee5333178592dea8 SHA512 be2abe87ac3c00024a12ede4f8756392457c926b882420a0fd62b55faa1add1e40427d79782af27128913456627bc85c767db40fff2050c2c518188e0712a01f WHIRLPOOL 8b6177c0ea159913ad800465c5388572a67c4827447a3b358ddb33cee0b06e62ae90ca635dfee54a2063b46b0951243b85147e6d38aaaf5db0a8d4b3b955cfc5
+MISC ChangeLog 26334 SHA256 2878d9a1d8ce0be1b5f7f2ccb9cb0f6559bc707f86c3c36c88abde08786462f0 SHA512 93dd9c569e55e8906798347028894e5fa14c105d9b903e350102f5fe93ba52e7286b9d0d1e0a9b5511a77c3b6633bc0b71217bf8861939871af92a1a70bfe8bc WHIRLPOOL 94020a8162dca4120fcad7eb722819e3d836d2be0265775db1b456cc2b303c82b53fe4491a476fe7d378b167ca432b3df7ecdafd3af17e9d396b2660c329fa09
 MISC metadata.xml 494 SHA256 0f4f12f8ac67c0049e4fd82fe8f5e15d9e7bedf2dc1d6c8a0950c596d897e67a SHA512 5e60a3af9bb8dfcae4d980d03f7a21f8454adea57c81110989da85aa31b0ca82e1293475b22c17a65220609f5b4a1f11bc14c4536fd4e650c2bbba7fde2b92f0 WHIRLPOOL 837e5f0e5548403c696c344cb53d24f5faebc2699a4351aa8d5ad053b92e8c0f0af64469aedd14dd6bafe16a0104ec59e9268e370fee2e9a5ebd8c90d805c161
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU0mI/AAoJEPiazRVxLXTFc3sP/0hyvmvL0Hxat4h5tybHCeqU
-7O7lHArc/rjVLtsE9DEqu7imoWC4Cv4wtOaqxsEonApWBpvsQRDPXezNdJCeUfSo
-HLJW32/jF6BgL4JHSkvC3O98Xt54Dznr+NjWiLfmTLxEtKKqVkoYIIx8nCJRYxuJ
-dnKkQ5uSDj0N/KB9cBI/P1e5nLPfLQjyrPz+divfLMTG34xykADqitIOaDIzSlL7
-RqtJhmMAG9+Rx2O03n6QZG/V16ORwrvH8FugpjQDvWWfGbNR8g3oEMP5+abvZtMY
-QXq9IusIr4k/WAni852jWgAJPNGk7ASU71ppSD0fVOEewr/U+o3F90eV1pkEifR0
-9CGdKLA5Ude/2UuzTKuN1vntx9W5XsWsYKasCK55HBLWTIPhfznHePICjPd3lgxO
-5pI8FjScKRlmEkVKvm/S8DRi+BhFfpx6Hflt5/eBO1OhGmglm9LNntgew5y5XxkT
-ASXhxGdgvgXnocZ+REZey5ZXUI/z5i5H5yDv9t0FtI32NPA9Ke874mK43lyMKiEe
-X9qtxc0NFOSlM3s83a+3ghQQCwc4DYxS3aPjMmWumH8EXaNSraLKFq0znc9qHLlO
-kgvzjJB/O3jCIoyOPrzSl9uv2oiQroMX8hWqxKLEi1pbczV1ZUjpRytFTESEqSes
-Hv/AMwQnNvXmVEjiCvxa
-=0frj
+iEYEAREIAAYFAlTTXw8ACgkQVWmRsqeSphPWCQCggCDPwIQGow/dwAA3p01eVuZJ
+qJkAn1BN1ID2I7gQsqMEGziQR3j+KA8t
+=gKyZ
 -----END PGP SIGNATURE-----
