@@ -4,11 +4,11 @@ DESCRIPTION=Useful Apache tools - htdigest, htpasswd, ab, htdbm
 EAPI=4
 HOMEPAGE=http://httpd.apache.org/
 IUSE=ssl
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
 LICENSE=Apache-2.0
 RDEPEND==dev-libs/apr-1* =dev-libs/apr-util-1* dev-libs/libpcre ssl? ( dev-libs/openssl ) !<www-servers/apache-2.2.4
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://apache/httpd/httpd-2.2.29.tar.bz2
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=550d901d815f679bd8b08694ba03c16c
+_md5_=7f26f5817fbfac61daaef022aaa46ccd
