@@ -11,26 +11,16 @@ DIST httpd-2.2.29.tar.bz2 5625498 SHA256 574b4f994b99178dfd5160bcb14025402e2ce38
 DIST httpd-2.4.10.tar.bz2 5031834 SHA256 176c4dac1a745f07b7b91e7f4fd48f9c48049fa6f088efe758d61d9738669c6a SHA512 e251f5b330da17a8920c589b9e0326d6dd45db28923167718db27b0af2edf769607e9ae6fbb859afbf0c345937fd59053423a2d74bd18ff2272a0f6a19a6496f WHIRLPOOL c9f81296052a61483ceef4ae4b4c467cf64a4035030472dc8c17355f572a4887ddc6179ade2a764a4e3f0cd4ab7cc34a3fa36577a148c3df7b8d44a5f1f0424d
 DIST httpd-2.4.12.tar.bz2 5054838 SHA256 ad6d39edfe4621d8cc9a2791f6f8d6876943a9da41ac8533d77407a2e630eae4 SHA512 f69db14b421f0e1e4861fe4d8b652688d50ca9eb41c622242d11ae55687eb6c2142a8505a8c3fb6f2bd53167be535bc0a77ca1af97e0720930fc7f20f4c1f8e8 WHIRLPOOL 56512066e8978c4a3d47d0cc2bb92093fd468a9b2f46b8b07fe4db366f55fa5e74ae58bbebe2377cbe0c66f1585759115c786f62f18ac1abc534fb257689d250
 EBUILD apache-2.2.27-r4.ebuild 3114 SHA256 6ebe72db03213516e3815bbb80141950afda24be41c72bdf6975ac3ddbbf98fa SHA512 88d23d6a0471868a19b5863f72b6117e61ce2dadb760b1e6455edbc6df0cc7e23f19303f917d7ae0ca6e451e9eb23e623078420ab897f0a22f9b0bd34228946c WHIRLPOOL 96e8046f6f156e6a66ed0f384373f23d032d1240f08d74d3247c628d7bf1d9cf075554c73dcc1a5e8704b5da8608cf9be73bd8748b00d1cdac6f66079bcb9cca
-EBUILD apache-2.2.29.ebuild 3122 SHA256 dcbd276a70f3b6977b4c8a3ae1af401c13f8d569c5bb9eaa62359d1f977af4b7 SHA512 2205704a2603019240410258dbc58ed71d4f55cad407f6fe778188e7cb836b7bf57a9290d2bd88a651865906e6fea8758a2d9e58425b660288d54c2d6f884da3 WHIRLPOOL 4f3da1c4cd376f33cb9667c73d83db055e6303a93e408207d1a0870dd850e1631c0070eee2ce1169b5bbdfede31b85e35ebde6991f37a68f0a438bd09b8f635e
+EBUILD apache-2.2.29.ebuild 3112 SHA256 6fd1d7b2ac72b646ccc90595ee0eec33e4f91d6cc31252b779b082a629df5556 SHA512 fc1533a06e9467cca40e36d7b5a81e067b6e8ad8429afc4bd5193d08a22449578864292eef60334fbca15a9687ff6e3d3054414ecfe34814286e704710aaea58 WHIRLPOOL c3d038ac4963864f50b39ccbf002b52cdd8b6b07a24821b6cee7fa8ee23d95b8bb768309ffdc074777c714b3fdffeb880792af073e2828d384b40d809753e57a
 EBUILD apache-2.4.10-r1.ebuild 7504 SHA256 352e6e41ae9e698867a55cbd88062d44237d677233ac53217ed72c0d2db59d52 SHA512 3a9efef257db4f1beb8bb505912601edf0b87d679a83d424d9c7f7ab2430cca9af139f598fd4ad1616b5378a3b8a0634e2bbc76e2ecdf44ac1394fdd4506205a WHIRLPOOL d181bbc65b79da77c96cb7d68a9fbbb81b565c9e0b7db50a4e1fcff7c0817e1359f662cf96a767ec1d266659df262483f4313862050a27f9d4a81f5f914d48b0
 EBUILD apache-2.4.12.ebuild 7507 SHA256 8f69ce13f24211989ba9019505603aaec5e275eb2fbc863e07603dcd00ce4d39 SHA512 0b54a233b6ef171a486cb77a008339865c5322f098de3412df23b729b3b2d731cfe96d4e3e2dcab2f6f72887a2821d7c42d77f0bcd35c59e0359d66447058d39 WHIRLPOOL e72db95d26e2230220ae5de1b1a29adb8f42f808fcb0aa2dd86ec28fea46e99823d9ce5d1e03812e1cf4188a0e25035428db7d52ebd1edcbc7562b4116ace1f7
-MISC ChangeLog 28638 SHA256 114fe3dd027c18c74d00fb3a01a1b03dca17262cb87286cf0e5e523c283cd282 SHA512 be3187a02da5a82e9ce09c6e9a25035b45debabfc067602cb6c09e23ca78aa2cb8b20aaa54838849965880b954414f98378e290290f36e633d9376d5042c918a WHIRLPOOL 5689452f8f5c10751a310b2555c7446836a204c5628394f109c53030366083d189d2df629fac79f49b3ed75c690e0b6dc39a9fe78bd95b763ce2fca355d4613d
+MISC ChangeLog 28732 SHA256 67cf264ab37e41036274af24da353de03a646f4b773f1d07b43022f430e12145 SHA512 1f9e4c324afabb51a2da9e1a4d749a30e8b6f4c03ef3fb80f56210a1c7f2a265f5d487e07955fa6f904408e7d553c271947a2dac37fc2e308806750643a9b005 WHIRLPOOL b6042d426dcf8d834ec02e47976ca62ec387c8ac2c06acb7a9410f6745a5f774a9705944e4a5a1da1a8359353656e1c70d08bf344c36664fd2ae3eba4356ab06
 MISC ChangeLog-2008 105137 SHA256 4afec18ad3c76df40314edb37b5512f81ca6223c38a899534d9d15342481accf SHA512 92dfd339b1c4ddec29222076a597220dc7faa504e2ee770339892f155febbf34004e60395f9eb21b43d3b1feb5f362c2946b69cc65151b5ba00fb53b35ccb9c6 WHIRLPOOL 89d77300aafb53ae0632904118064de19313fe51f635512314471e845574e7a624a770ae4ca4e335cff67d4fee92e062d28ef985a54c577a1b8b3ea0f621c0f8
 MISC metadata.xml 2882 SHA256 bb1c73d9b53a1049c14b477d4441b09670ecafcf46a0ad114c24bb284d0d194a SHA512 bd9a0a5f26e1420aa6023160208d177e233f97f2265b8fad68772a084cbc9fabb2a186f14916a5a664b5590a6052fe039874ff96b1bd9d3dc530c3750561c7ce WHIRLPOOL 0e92d1cd3fbbf3f75ebd38e356a736061c9ea19afd40b06f58abe0ed86219223cafab188bbfa4ce9c91a8cc6619de47dfc3a68edc2c39e6a38476915ad8d48ba
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU0mHhAAoJEPiazRVxLXTF4xQP/R/6QxMdmuwGZdfqaae2mmHw
-vqog3YzL6tfu0DnRrgcNhxHp6HQ0VbWwEBgLQ90z3XD1f2E4NDPMMdKVv8Ta3z/L
-Ww7EoyBuQm7gFVvEx8qUbwx5xgSrPzt4ek2zFgFlaZMXJOdmN66+3XNKrbzmuB0g
-SFf7TuMe+gfGSujNdEzt8D7OOnlOkjkA1yynjAcrOntySVeNGgiFFs5jEahNL+c/
-GUBQLsDLSo447EbNnM5sZ39b6lnY3etjniRmp1Jsg2eo2qffu/a7rxzoBhu7LtGZ
-Ty/IkgcIBV3tQrUCxhEHrdDauVvEQj7/wRQ9aeBEFyiSYO6D1feKjUv1dPVRAJNh
-vRiqM+FjBmrGiFqtuEIpLtCNxukorLH9QCRkNSwJ8E7eefpvI7m7G4oRTFm9SF67
-zMndyQ8vPERZ/DBPigAq/dzlXobbBl695OQDIiXpFzE+1jHibsEOYGBZ59kbO1p8
-mn/HZGdAiC1Wp9s+50K+jRVGE6iS6QEZmdS8/w41iSt4ZxzkznM3VjPgpSB5QcQU
-bZLPbMOFXiAd68zp6m9lj6Nwp2h99Di+a9zOJQPhcbsKbGf5HdYYostXch/ZsKLI
-mSVt27PAj/Fr2C+uiBwI+6boFVZKLYBXqsVhD4+lAi1Gu5NhbQSEIiwn2B1Ll1kz
-UvvMC1+Px9fXHaScC+4x
-=/L8m
+iEYEAREIAAYFAlTTXxQACgkQVWmRsqeSphOzEwCeLPRJQFtKawnNMJvYpej//n4Y
+aRUAn2uwMsh3I23+GBlOPArdjKmIgd6G
+=DDfE
 -----END PGP SIGNATURE-----
