@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/apache
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.292 2015/02/04 18:16:00 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.293 2015/02/05 12:16:19 jer Exp $
+
+  05 Feb 2015; Jeroen Roovers <jer@gentoo.org> apache-2.2.29.ebuild:
+  Stable for HPPA (bug #535948).
 
 *apache-2.4.12 (04 Feb 2015)
 
