@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/apache-tools
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.194 2015/02/04 18:17:34 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.195 2015/02/05 12:16:13 jer Exp $
+
+  05 Feb 2015; Jeroen Roovers <jer@gentoo.org> apache-tools-2.2.29.ebuild:
+  Stable for HPPA (bug #535948).
 
 *apache-tools-2.4.12 (04 Feb 2015)
 
